cmake_minimum_required(VERSION 2.8.3)
project(leetcode_solution_cpp)

add_compile_options(-std=c++11)
set( CMAKE_BUILD_TYPE "Debug" )

add_executable(num4_median src/num4_median.cpp)
add_executable(longest_palindromic src/longest_palindromic.cpp)
add_executable(lengthOfLongestSubstring src/lengthOfLongestSubstring.cpp)
#add_executable(ZigZagConvert src/ZigZagConvert.cpp)
add_executable(removeNthNode src/removeNthNode.cpp)
add_executable(mergeTwoLists src/mergeTwoLists.cpp)
add_executable(hashCycle src/hashCycle.cpp)
add_executable(getIntersectionNode src/getIntersectionNode.cpp)
add_executable(removeElements src/removeElements.cpp)
add_executable(reverseList src/reverseList.cpp)
add_executable(isPalindrome src/isPalindrome.cpp)
add_executable(deleteDuplicates src/deleteDuplicates.cpp)
add_executable(middleNode src/middleNode.cpp)
add_executable(removeDuplicatesArray src/removeDuplicatesArray.cpp)
add_executable(removeElementArray src/removeElementArray.cpp)
add_executable(searchInsert src/searchInsert.cpp)
add_executable(maxSubArray src/maxSubArray.cpp)
add_executable(plusOne src/plusOne.cpp)
add_executable(mergeArray src/mergeArray.cpp)
add_executable(generate src/generate.cpp)
add_executable(getRow src/getRow.cpp)
add_executable(maxProfit src/maxProfit.cpp)
add_executable(rotateRight src/rotateRight.cpp)
add_executable(swapPairs src/swapPairs.cpp)
add_executable(deleteDuplicatesPlus src/deleteDuplicatesPlus.cpp)
add_executable(partition src/partition.cpp)
add_executable(reverseBetween src/reverseBetween.cpp)
add_executable(reorderList src/reorderList.cpp)
add_executable(detectCycle src/detectCycle.cpp)
add_executable(splitListToParts src/splitListToParts.cpp)
add_executable(oddEvenList src/oddEvenList.cpp)
add_executable(numComponents src/numComponents.cpp)
add_executable(nextLargerNodes src/nextLargerNodes.cpp)
add_executable(isAnagram src/isAnagram.cpp)
add_executable(intersection src/intersection.cpp)
add_executable(intersect src/intersect.cpp)
add_executable(sortArrayByPartyII src/sortArrayByPartyII.cpp)
add_executable(largestPerimeter src/largestPerimeter.cpp)






